# Roadmap-Learning-Chatbot

./: README.md
AI/: README.md  pyproject.toml  server.py  tools.yaml
AI/restaurant_concierge/: agent.py
AI/restaurant_concierge/.adk/: session.db
AI/roadmap/: agent.py
AI/roadmap/.adk/: session.db
AI/roadmap_learning_architect/.adk/: session.db
AI/scripts/: generate_embeddings.py  seed_db.py
AI/scripts/.adk/: session.db
frontend/: index.html  package-lock.json  package.json
frontend/src/assets/: main.css
frontend/src/components/: ChatBubble.vue  QuickSuggestions.vue  TypingIndicator.vue
frontend/src/composables/: useChat.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: ChatView.vue
